# cpp-wh

./: .clang-format  CMakeLists.txt  Makefile
src/: CMakeLists.txt
src/example_short/: CMakeLists.txt  main.cpp
src/hello_world/: CMakeLists.txt
